--- a/front/public/translation/jp.json
+++ b/front/public/translation/jp.json
@@ -37,7 +37,8 @@
       }
     },
     "digitalLovers": {
-      "title": "TheDigitalLovers – NTTデータのムーブメント",
+      "titleLine1": "TheDigitalLovers",
+      "titleLine2": "NTTデータのムーブメント",
       "description": "NTTデータでは、柔軟で革新的、多文化かつ協調的な環境の中で、プロとして成長できる機会を提供しています。さまざまなキャリアプランや、包括的な成長を支援する多くのチャンスをご用意しています。テクノロジー分野の求人情報をぜひご覧いただき、TheDigitalLoversコミュニティにご参加ください。",
       "cta": "求人情報を見る"
     },
